frontend/src/components/SearchBox/styles.css
.searchbox {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 1.2rem;
    border-radius: 1.2rem;

    color: var(--color-primary-darker);
    background-color: var(--color-white);
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
    border-width: 0.05rem;
    border-style: solid;
    border-color: white;

    transition-timing-function: ease-in-out;
    transition-duration: 0.2s;
    transition-property: all;
}

.searchbox.flat {
    box-shadow: none;
    border-color: var(--color-border-grey);
}

.searchbox.active {
    color: var(--color-primary);
    border-color: var(--color-primary);
}

.searchbox-field::placeholder {
    color: var(--color-grey-3);
}

.searchbox-field {
    width: 100%;
    padding: 1rem 1rem !important;
    outline: none;
    font-family: "Inter";
    font-weight: 500;
    font-size: 1.25rem !important;
    color: var(--color-primary-darker) !important;
    border: 0 solid black;
}

.sb-button {
    padding: 0 0.8rem 0 1.2rem;
    flex-shrink: 0;
    margin-right: -0.6rem;
    border-top-left-radius: 2rem;
    border-bottom-left-radius: 2rem;
    border-top-right-radius: 1rem;
    border-bottom-right-radius: 1rem;
    font-family: "Inter";
    font-weight: 600;
    text-transform: none;
    font-size: 1rem;
    letter-spacing: normal;
}

.sb-profile-picture {
    height: 2.5rem;
    width: 2.5rem;
    background-color: red;
    border-radius: 50%;
    display: inline-block;
    flex-shrink: 0;
}

.search-loading {
    width: 100%;
    display: flex;
    justify-content: center;
}

